# TargetSize-Video-Compressor

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
include/: FFmpegRunner.hpp  ProcessRunner.hpp  TaskQueue.hpp  TaskStatus.hpp  ThreadPool.hpp  dialogs.hpp
src/: FFmpegRunner.cpp  ProcessRunnerPosix.cpp  ProcessRunnerWin.cpp  TaskQueue.cpp  ThreadPool.cpp  dialogs_stub.cpp  dialogs_win.cpp  main.cpp
